And yet another iteration of generics + deleted DumpMapping
- DumpMapping was incompatible and unused
- Those caches are problematic, I doubt they work correctly

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>